--- a/src/html/about/privacy/index.html
+++ b/src/html/about/privacy/index.html
@@ -16,7 +16,7 @@
                 <div class="p-4">
                     <p class="h3 mb-2">Политика конфиденциальности</p>
                     <p class="mb-0 fs-5">
-                        <a href="/privacy/policy.html" class="link">
+                        <a href="/about/privacy/policy.html" class="link">
                             Открыть
                         </a>
                     </p>
@@ -26,7 +26,7 @@
                 <div class="p-4">
                     <p class="h3 mb-2">Политика обработки cookie</p>
                     <p class="mb-0 fs-5">
-                        <a href="/privacy/cookie.html" class="link">
+                        <a href="/about/privacy/cookie.html" class="link">
                             Открыть
                         </a>
                     </p>
@@ -36,7 +36,7 @@
                 <div class="p-4">
                     <p class="h3 mb-2">Условия использования</p>
                     <p class="mb-0 fs-5">
-                        <a href="/privacy/termsofuse.html" class="link">
+                        <a href="/about/privacy/termsofuse.html" class="link">
                             Открыть
                         </a>
                     </p>
