--- a/src/html/more/index.html
+++ b/src/html/more/index.html
@@ -42,29 +42,29 @@
         <div style="margin-bottom: 50px">
             <h1>ОБНОВЛЕНИЯ</h1>
             <ul class="fs-4">
-                <li><a href="/updates/great-news-channel-special/" class="link">Обновление медиа канала Special</a></li>
-                <li><a href="/updates/change-creagoo-ru-simplify-improve-and-share/" class="link">Упрощение, улучшение и «Поделиться»</a></li>
-                <li><a href="/updates/novyy-sayt-creagoo-ru/" class="link">Новый сайт creagoo.ru</a></li>
+                <li><a href="/p/great-news-channel-special/" class="link">Обновление медиа канала Special</a></li>
+                <li><a href="/p/change-creagoo-ru-simplify-improve-and-share/" class="link">Упрощение, улучшение и «Поделиться»</a></li>
+                <li><a href="/p/novyy-sayt-creagoo-ru/" class="link">Новый сайт creagoo.ru</a></li>
             </ul>
         </div>
         <div style="margin-bottom: 50px">
             <h1>ИГРЫ</h1>
             <ul class="fs-4">
-                <li><a href="/games/babkaonthehuntclassic/" class="link">Babka On The Hunt</a></li>
-                <li><a href="/games/sweetness/" class="link">Sweetness</a></li>
-                <li><a href="/games/rememberthesecards/" class="link">Запомни эти карты</a></li>
-                <li><a href="/games/rockpaperscissors/" class="link">Камень ножницы бумага</a></li>
+                <li><a href="/p/babkaonthehuntclassic/" class="link">Babka On The Hunt</a></li>
+                <li><a href="/p/sweetness/" class="link">Sweetness</a></li>
+                <li><a href="/p/rememberthesecards/" class="link">Запомни эти карты</a></li>
+                <li><a href="/p/rockpaperscissors/" class="link">Камень ножницы бумага</a></li>
             </ul>
         </div>
         <div style="margin-bottom: 50px">
             <h1>ТЕХНИКА</h1>
             <ul class="fs-4">
-                <li><a href="/tech/macbook-2017-review/" class="link">Обзор на макбук 2017 года</a></li>
-                <li><a href="/tech/difference-in-macbooks-for-3-years/" class="link">Разница в макбуках за 3 года</a></li>
-                <li><a href="/tech/ipad-mini-4-is-an-ambiguous-device/" class="link">iPad mini 4 — неоднозначный девайс</a></li>
-                <li><a href="/tech/the-new-generation-of-the-iphone-xr-device/" class="link">Новое поколение устройства — iPhone XR</a></li>
-                <li><a href="/tech/macbook-pro-2014-13-review/" class="link">Macbook Pro 2014 13' — обзор</a></li>
-                <li><a href="/tech/experience-using-iphone-6s-for-six-months/" class="link">Опыт использования iPhone 6s в течение полугода</a></li>
+                <li><a href="/p/macbook-2017-review/" class="link">Обзор на макбук 2017 года</a></li>
+                <li><a href="/p/difference-in-macbooks-for-3-years/" class="link">Разница в макбуках за 3 года</a></li>
+                <li><a href="/p/ipad-mini-4-is-an-ambiguous-device/" class="link">iPad mini 4 — неоднозначный девайс</a></li>
+                <li><a href="/p/the-new-generation-of-the-iphone-xr-device/" class="link">Новое поколение устройства — iPhone XR</a></li>
+                <li><a href="/p/macbook-pro-2014-13-review/" class="link">Macbook Pro 2014 13' — обзор</a></li>
+                <li><a href="/p/experience-using-iphone-6s-for-six-months/" class="link">Опыт использования iPhone 6s в течение полугода</a></li>
             </ul>
         </div>
         <div style="margin-bottom: 50px">
