--- a/src/parts/footer.html
+++ b/src/parts/footer.html
@@ -46,16 +46,16 @@
         <div class="col mb-4">
             <h4 class="footer--text-head mb-2" style="padding-left: 17px;">Посты</h4>
             <ul class="nav flex-column">
-                <li class="nav-item mb-2"><a href="/games/russiancards2/"
+                <li class="nav-item mb-2"><a href="/p/russiancards2/"
                         aria-label="Открыть страницу игры Русские Карты 2"
                         class="nav-link link fs-5">«Русские Карты 2»</a></li>
-                <li class="nav-item mb-2"><a href="/games/rememberthesecards"
+                <li class="nav-item mb-2"><a href="/p/rememberthesecards"
                         aria-label="Открыть страницу игры Запомни эти карты"
                         class="nav-link link fs-5">«Запомни эти карты»</a></li>
-                <li class="nav-item mb-2"><a href="/games/babkaonthehunt/"
+                <li class="nav-item mb-2"><a href="/p/babkaonthehunt/"
                         aria-label="Открыть страницу игры Бабушка на охоте"
                         class="nav-link link fs-5">Babka On The Hunt</a></li>
-                <li class="nav-item mb-2"><a href="/games/sweetness" aria-label="Открыть страницу игры Sweetness"
+                <li class="nav-item mb-2"><a href="/p/sweetness" aria-label="Открыть страницу игры Sweetness"
                         class="nav-link link fs-5">Sweetness</a></li>
             </ul>
         </div>
@@ -146,20 +146,20 @@
             <div class="row row-cols-1 fs-6 row-cols-lg-4 g-2 g-lg-3 align-items-center">
                 <div class="col footer--adaptive-nav">
                     <div class="d-flex flex-wrap flex-column">
-                        <div><a href="/about.html" class="link">О проекте</a></div>
-                        <div><a href="/privacy/" class="link">Пользователю</a></div>
+                        <div><a href="/about/" class="link">О проекте</a></div>
+                        <div><a href="/about/privacy/" class="link">Пользователю</a></div>
                     </div>
                 </div>
                 <div class="col footer--adaptive-nav">
                     <div class="d-flex flex-wrap flex-column">
-                        <div><a href="/updates.html" class="link">Обновления</a></div>
+                        <div><a href="/about/new/" class="link">Обновления</a></div>
                         <div><a href="/translate.html" class="link">Перевод сайта</a></div>
                     </div>
                 </div>
                 <div class="col footer--adaptive-nav">
                     <div class="d-flex flex-wrap flex-column">
                         <div><a href="/rss.xml" class="link">RSS статей</a></div>
-                        <div><a href="/write-post.html" class="link">Написать статью</a></div>
+                        <div><a href="/about/post/" class="link">Написать статью</a></div>
                     </div>
                 </div>
                 <div class="col footer--adaptive-nav">
