--- a/src/parts/header-post.html
+++ b/src/parts/header-post.html
@@ -55,7 +55,7 @@
                 <div class="d-flex justify-content-end">
                     <div class="header--adaptive-button">
                         <div class="text-invert-dark btn-rounded fs-5">
-                            <a href="/write-post.html" aria-label="Написать статью для спешиал"
+                            <a href="/about/post/" aria-label="Написать статью для спешиал"
                                 class="btn btn-light px-4 d-flex header--button btn-light--post text-decoration-none text-invert-dark align-items-center">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="@@color"
                                     class="me-btn-1" viewBox="0 0 16 16">
@@ -73,7 +73,7 @@
         <!-- MOBILE -->
         <div class="container d-flex flex-wrap align-items-center justify-content-center header--logo-mobile">
 
-            <a href="/write-post.html" id="mobilebtn_addpost" class="me-auto header--mobile-btn">
+            <a href="/about/post/" id="mobilebtn_addpost" class="me-auto header--mobile-btn">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="@@color" class="header--mobile-button"
                     viewBox="0 0 16 16">
                     <path fill-rule="evenodd"
@@ -143,7 +143,7 @@
             </li>
             }
             @@if(context.activeItem != "updates") {
-            <li class="mx-2 px-3"><a href="/updates/"
+            <li class="mx-2 px-3"><a href="/p/"
                     class="nav-link header--article-link h3 text-lowercase header--nav-link-white"
                     style="color: @@color">ОБНОВЛЕНИЯ</a></li>
             }
@@ -155,7 +155,7 @@
             </li>
             }
             @@if(context.activeItem != "games") {
-            <li class="mx-2 px-3"><a href="/games/"
+            <li class="mx-2 px-3"><a href="/p/"
                     class="nav-link header--article-link h3 text-lowercase header--nav-link-white"
                     style="color: @@color">ИГРЫ</a></li>
             }
@@ -167,7 +167,7 @@
             </li>
             }
             @@if(context.activeItem != "tech") {
-            <li class="mx-2 px-3"><a href="/tech/"
+            <li class="mx-2 px-3"><a href="/p/"
                     class="nav-link header--article-link h3 text-lowercase header--nav-link-white"
                     style="color: @@color">ТЕХНИКА</a></li>
             }
@@ -229,7 +229,7 @@
                     Статьи
                 </span>
             </a>
-            <a href="/updates/" aria-label="Открыть категорию Обновления" class="header--mobile-item fs-4">
+            <a href="/p/" aria-label="Открыть категорию Обновления" class="header--mobile-item fs-4">
                 <span class="d-flex flex-wrap align-items-center">
                     <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="me-3"
                         viewBox="0 0 16 16">
@@ -239,7 +239,7 @@
                     Обновления
                 </span>
             </a>
-            <a href="/games/" aria-label="Открыть категорию ИГРЫ" class="header--mobile-item fs-4">
+            <a href="/p/" aria-label="Открыть категорию ИГРЫ" class="header--mobile-item fs-4">
                 <span class="d-flex flex-wrap align-items-center">
                     <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="me-3"
                         viewBox="0 0 16 16">
@@ -251,7 +251,7 @@
                     Игры
                 </span>
             </a>
-            <a href="/tech/" aria-label="Открыть категорию ТЕХНИКА" class="header--mobile-item fs-4">
+            <a href="/p/" aria-label="Открыть категорию ТЕХНИКА" class="header--mobile-item fs-4">
                 <span class="d-flex flex-wrap align-items-center">
                     <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="me-3"
                         viewBox="0 0 16 16">
@@ -284,13 +284,13 @@
                 </span>
             </button>
 
-            <a href="/about.html" aria-label="Открыть страницу о проекте" class="header--mobile-more fs-5">
+            <a href="/about/" aria-label="Открыть страницу о проекте" class="header--mobile-more fs-5">
                 О проекте
             </a>
-            <a href="/privacy/" aria-label="Открыть страницу для пользователя" class="header--mobile-more fs-5">
+            <a href="/about/privacy/" aria-label="Открыть страницу для пользователя" class="header--mobile-more fs-5">
                 Пользователю
             </a>
-            <a href="/updates.html" aria-label="Открыть обновления сайта" class="header--mobile-more fs-5">
+            <a href="/about/new/" aria-label="Открыть обновления сайта" class="header--mobile-more fs-5">
                 Обновления
             </a>
             <a href="/translate.html" aria-label="Открыть перевод сайта" class="header--mobile-more fs-5">
@@ -299,7 +299,7 @@
             <a href="/rss.xml" aria-label="Открыть rss статей" class="header--mobile-more fs-5">
                 RSS статей
             </a>
-            <a href="/write-post.html" aria-label="Написать статью" class="header--mobile-more fs-5">
+            <a href="/about/post/" aria-label="Написать статью" class="header--mobile-more fs-5">
                 Написать статью
             </a>
             <div aria-label="#" class="header--more-text fs-6">
