--- a/src/html/more/important.html
+++ b/src/html/more/important.html
@@ -49,27 +49,27 @@
                                 <li><a href="/p/how-i-develop-websites-in-php/" class="link">Как я разрабатываю сайты на
                                                 PHP</a></li>
 
-                                <li><a href="/updates/great-news-channel-special/" class="link">Обновление медиа канала
+                                <li><a href="/p/great-news-channel-special/" class="link">Обновление медиа канала
                                                 Special</a></li>
-                                <li><a href="/updates/change-creagoo-ru-simplify-improve-and-share/"
+                                <li><a href="/p/change-creagoo-ru-simplify-improve-and-share/"
                                                 class="link">Упрощение, улучшение и
                                                 «Поделиться»</a></li>
-                                <li><a href="/updates/novyy-sayt-creagoo-ru/" class="link">Новый сайт creagoo.ru</a>
+                                <li><a href="/p/novyy-sayt-creagoo-ru/" class="link">Новый сайт creagoo.ru</a>
                                 </li>
 
 
 
 
-                                <li><a href="/tech/macbook-2017-review/" class="link">Обзор на макбук 2017 года</a></li>
+                                <li><a href="/p/macbook-2017-review/" class="link">Обзор на макбук 2017 года</a></li>
 
-                                <li><a href="/tech/ipad-mini-4-is-an-ambiguous-device/" class="link">iPad mini 4 —
+                                <li><a href="/p/ipad-mini-4-is-an-ambiguous-device/" class="link">iPad mini 4 —
                                                 неоднозначный девайс</a></li>
-                                <li><a href="/tech/the-new-generation-of-the-iphone-xr-device/" class="link">Новое
+                                <li><a href="/p/the-new-generation-of-the-iphone-xr-device/" class="link">Новое
                                                 поколение устройства — iPhone
                                                 XR</a></li>
-                                <li><a href="/tech/macbook-pro-2014-13-review/" class="link">Macbook Pro 2014 13' —
+                                <li><a href="/p/macbook-pro-2014-13-review/" class="link">Macbook Pro 2014 13' —
                                                 обзор</a></li>
-                                <li><a href="/tech/experience-using-iphone-6s-for-six-months/" class="link">Опыт
+                                <li><a href="/p/experience-using-iphone-6s-for-six-months/" class="link">Опыт
                                                 использования iPhone 6s в
                                                 течение полугода</a></li>
                         </ul>
