--- a/src/parts/p--more-post.html
+++ b/src/parts/p--more-post.html
@@ -4,7 +4,7 @@
         <div class="row row-cols-1 row-cols-lg-2 gx-3">
 
             <div class="col pb-3 mb-sm-0">
-                <a href="/tech/macbook-2017-review" class="card card--link card--rounded border-0">
+                <a href="/p/macbook-2017-review" class="card card--link card--rounded border-0">
                     <img src="/img/postsmin/p013.jpg" class="card-img" alt="Макбук 2017 года с открытой крышкой">
                     <div class="card-img-overlay card--bg-gradient d-flex">
                         <p class="card-title text-white mt-auto card--title card--title-2">Обзор на макбук 2017 года</p>
@@ -12,7 +12,7 @@
                 </a>
             </div>
             <div class="col pb-3 mb-sm-0">
-                <a href="/tech/airpods-pro-is-it-worth-the-money" class="card card--link card--rounded border-0">
+                <a href="/p/airpods-pro-is-it-worth-the-money" class="card card--link card--rounded border-0">
                     <img src="/img/postsmin/p019.jpg" class="card-img" alt="Наушники AirPods Pro">
                     <div class="card-img-overlay card--bg-gradient d-flex">
                         <p class="card-title text-white mt-auto card--title card--title-2">AirPods Pro — стоит потратиться?</p>
@@ -38,7 +38,7 @@
                 </a>
             </div>
             <div class="col pb-3 mb-sm-0">
-                <a href="/tech/difference-in-macbooks-for-3-years" class="card card--link card--rounded border-0">
+                <a href="/p/difference-in-macbooks-for-3-years" class="card card--link card--rounded border-0">
                     <img src="/img/postsmin/p017.jpg" class="card-img" alt="Макбук 2017 и 2014 стоят напротив">
                     <div class="card-img-overlay card--bg-gradient d-flex">
                         <p class="card-title text-white mt-auto card--title card--title-2">Разница в макбуках за 3 года</p>
